--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   font-style: normal;
   height: 100%;
   margin: 0;
-  overflow: auto;
+  overflow-y: auto;
   box-sizing: border-box;
 }
 * {
@@ -19,6 +19,13 @@ body {
 .container {
   display: flex;
   flex-direction: row-reverse;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+@media screen and (max-width: 500px) {
+  
+  
 }
 body {
   -ms-overflow-style: none; /* Internet Explorer 10+ */
@@ -28,7 +35,7 @@ body::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
 .c-box {
-  width: 22rem;
+  width: 20%;
   height: 100%;
   position: fixed;
   top: 0px;
@@ -40,18 +47,18 @@ body::-webkit-scrollbar {
   width: 100%;
   height: 100%;
   padding: 2.5rem 3rem;
+  margin-right: 50px;
 }
 .c-text {
-  left: 2.5rem;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  width: 70%;
+position: relative;
+top: 50%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+
 }
 .c-tit {
-  font-size: 2rem;
-  width: 24rem;
+  font-size: 1.9rem;
   font-weight: 400;
   margin-bottom: 1rem;
 }
@@ -60,7 +67,6 @@ body::-webkit-scrollbar {
   font-weight: 300;
   margin-bottom: 1.5rem;
   color: #d5d5d5;
-  width: 15rem;
 }
 .c-span {
   color: #bcff9d;
@@ -69,14 +75,19 @@ body::-webkit-scrollbar {
 hr {
   border: 1px solid;
 }
+
 .box {
   display: flex;
-  flex-basis: 80%;
+width: 90%;
+margin: 0rem 0rem 0rem 0rem;
+
 }
 .box-wrap {
   width: 100%;
+  overflow-x:hidden;
   height: 100%;
   padding: 3rem 2rem 3rem;
+  margin: 0rem 0rem 0rem 9rem;
 }
 .box-p {
   font-size: 1rem;
@@ -372,4 +383,150 @@ hr {
   width: 100%;
   margin-top: 2rem;
   border: 1px solid rgb(36, 115, 115);
+}
+@media screen and (max-width: 500px) {
+.box-wrap{
+  padding: 0;
+  margin: 0;
+}
+.bubble {
+display: none;
+}
+ img{
+   width: 20px;
+   margin: 0.5rem;
+ } 
+ .c-tit{
+   font-size:1.1rem;
+   margin-bottom: 0.1rem
+ }
+ .container {
+   flex-direction: column-reverse;
+ }
+
+ .c-box {
+   position: fixed;
+   height: 20%;
+   width: 100%;
+
+ }
+ .c-text{
+top: 10%;
+left: 10%;
+width: 100%;
+ }
+ .c-p{
+font-size: 0.6rem;
+margin-bottom: 0rem;
+ }
+ .c-container{
+padding: 0;
+margin: 0;
+ }
+ hr{
+   border: none
+ }
+ .box-p{
+   font-size:0.5rem;
+   position: absolute;
+   z-index: 99;
+   top: 2%;
+   right: 3%;
+   
+ }
+ .box-a{
+   margin-left: 0.2rem;
+ }
+ .form{
+   margin: 8.5rem 2rem 2rem;
+   width: auto;
+ }
+ .form h1{
+   font-size: 1rem;
+   font-weight: 500;
+ }
+ .form-control{
+   font-size: 0.6rem;
+   padding: 0 0.5rem;
+   height: 2.2rem;
+ }
+ .form p{
+   font-size: 0.6rem;
+   margin: 0;
+ }
+ .lab{
+   font-size: 0.7rem;
+   font-weight: 400;
+   margin: 1rem 0rem 0.5rem 0rem;
+ }
+ .inbox{
+   height: 2.2rem;
+   width: 2.2rem;
+   margin-right: 0.5rem;
+   font-size: 0.6rem;
+ }
+ .for-btn{
+   font-size: 0.7rem;
+   margin: 0.8rem 0;
+ }
+ .wrapper{
+   display: block;
+   margin: -1.5rem 0rem 0rem 2rem;
+ }
+ .button{
+   font-size: 0.7rem;
+   margin: 0;
+   width: 7rem;
+   height: 2rem;
+   position: absolute;
+   bottom: 3%;
+   left: 30%;
+
+ }
+ .keypad{
+   font-size: 1rem;
+   height: 3rem;
+   width: 3rem;
+   margin: 0.3rem;
+
+ }
+ .refresh-btn{
+   width: 3rem;
+   height: 3rem;
+   font-size: 1rem;
+ }
+ .delete{
+  width: 7rem;
+    height: 2rem;
+    font-size: 0.7rem;
+ }
+ .clear{
+  width: 7rem;
+    height: 2rem;
+    font-size: 0.7rem;
+ }
+ .advert{
+   display: none;
+ }
+ .status{
+   width: 500px;
+ }
+ .status-holder{
+   width: 6rem;
+   height: 0rem;
+   font-size: 0.6rem;
+   padding: 0.8rem;
+   margin: 0.1rem 0.1rem 0rem 0rem;
+ }
+ .status-container{
+   margin: 0rem;
+ }
+ .status-line{
+   width: 107%;
+ }
+ .butt{
+  margin: 2rem 0; 
+  font-size:0.7rem;
+width: 7rem;
+height: 2rem; }
 }
